# frontend/openapi.json
@@ -1063,6 +1063,21 @@
                         "title": "Portrait Url",
                         "type": "string"
                     },
+                    "character_id": {
+                        "title": "Character Id",
+                        "type": "integer"
+                    },
+                    "main_character_id": {
+                        "anyOf": [
+                            {
+                                "type": "integer"
+                            },
+                            {
+                                "type": "null"
+                            }
+                        ],
+                        "title": "Main Character Id"
+                    },
                     "character_name": {
                         "title": "Character Name",
                         "type": "string"
@@ -1082,6 +1097,8 @@
                 },
                 "required": [
                     "portrait_url",
+                    "character_id",
+                    "main_character_id",
                     "character_name",
                     "estimated_total",
                     "actual_total",
@@ -1134,6 +1151,21 @@
                         "title": "Portrait Url",
                         "type": "string"
                     },
+                    "character_id": {
+                        "title": "Character Id",
+                        "type": "integer"
+                    },
+                    "main_character_id": {
+                        "anyOf": [
+                            {
+                                "type": "integer"
+                            },
+                            {
+                                "type": "null"
+                            }
+                        ],
+                        "title": "Main Character Id"
+                    },
                     "character_name": {
                         "title": "Character Name",
                         "type": "string"
@@ -1149,6 +1181,8 @@
                 },
                 "required": [
                     "portrait_url",
+                    "character_id",
+                    "main_character_id",
                     "character_name",
                     "estimated_total",
                     "actual_total"
@@ -1489,6 +1523,10 @@
             },
             "PermissionsSchema": {
                 "properties": {
+                    "main_character_id": {
+                        "title": "Main Character Id",
+                        "type": "integer"
+                    },
                     "access_pve": {
                         "title": "Access Pve",
                         "type": "boolean"
@@ -1511,6 +1549,7 @@
                     }
                 },
                 "required": [
+                    "main_character_id",
                     "access_pve",
                     "manage_entries",
                     "manage_rotations",
